# Ros1POLIMI

first_project/: CMakeLists.txt  Readme.txt.txt  package.xml
first_project/launch/: gpsOdometerTest.launch  launch.launch  odometerTest.launch
first_project/rviz/: view_config.rviz  view_config_gps_odometer_test.rviz  view_config_odometer_test.rviz
first_project/src/: gps_odometer.cpp  odometer.cpp  sector_times.cpp
second_project/: CMakeLists.txt  Readme.txt.txt  info.txt.txt  package.xml
second_project/cfg/: costmap_common_params.yaml  dwa_local_planner_params.yaml  local_costmap_params.yaml
second_project/csv/: goals.csv
second_project/launch/: mapping.launch  navigation.launch
second_project/map/: map.world  mapCrop.pgm  mapCrop.yaml  robot.inc
second_project/rviz/: first_node_rviz.rviz  second_node_rviz.rviz
second_project/src/: goal_publisher.cpp  laser_scan_merger.cpp  map.world  odom_to_tf.cpp  robot.inc
